2005-05-04  Ganesh  <rganesan@novell.com>
	* htmltext.c (prepare_attrs): checking for FALSE instead of 0

	* htmltext.c (html_text_append): Passing FALSE to initialize the link
	structure visited flag.

	* htmltext.c (html_text_add_link_full): Passing FALSE to initialize the
	link structure visited flag.

	* htmltext.c (html_link_dup): Initialize the is_visited flag while dup.

	* htmltext.c (html_link_new): Initialize the is_visited flag for new link.

	* htmltext.h : Changed declarion of html_link_new() function.

2005-05-05  Radek Doulik  <rodo@novell.com>

	* htmlengine-save.c (html_engine_save_buffer_free): make it
	possible to get the buffer string from freed buffer, for that pass
	FALSE as string_free. it works similar to g_string_free

	* gtkhtml-enums.h: added GTK_HTML_COMMAND_IS_SELECTION_ACTIVE

	* gtkhtml-properties.c: added GTK_HTML_COMMAND_IS_SELECTION_ACTIVE

	* gtkhtml.c: added GTK_HTML_COMMAND_IS_SELECTION_ACTIVE
	(get_selection_string): new helper function to get selection
	string for text/html or text/plain
	(gtk_html_get_selection_html): new method to get text/html
	selection from gtkhtml

2005-05-04  Ganesh  <rganesan@novell.com>

        * htmltext.c (html_text_set_link_visited): new function to set the
        visited link flag

        * htmltext.c (html_text_change_set): new function to set change to
        text and all its slaves

        * gtkhtml.c (key_press_event): call the html_set_link_visited function
        to set the flag for key press (Enter key).

        * gtkhtml.c (button_release_event): call the html_set_link_visited function
        to set the flag for mouse click.

        * htmlcolorset.c (html_colorset_new): set the clink color to red.

        * htmlcolorset.c (html_colorset_set_style): set the vlink color to red.

        * htmltext.c (prepare_attrs) : prepare the pango attribute with appropriate
        color.

        * htmltext.h : Declare new funciton and variable.

2005-05-03  Radek Doulik  <rodo@novell.com>
